--- a/togetdog_client/src/App.css
+++ b/togetdog_client/src/App.css
@@ -41,3 +41,15 @@ body {
   height: 100%;
   width: 100%;
 }
+
+.text-align-center {
+  text-align: center;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.pink-font {
+  color: #b7147e;
+}
