S08P12A807-235 #style Feature:front: 피드 레이아웃 구성 중

--- a/togetdog_client/src/App.css
+++ b/togetdog_client/src/App.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap');
 
 body {
-  background-color: #f6f6f6;
+  /* background-color: #f6f6f6; */
   display: flex;
   justify-content: center;
   align-items: center;
