--- a/togetdog_client/src/App.css
+++ b/togetdog_client/src/App.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap");
 
 body {
   /* background-color: #f6f6f6; */
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 800px; /* 현재 웹스크린의 높이 100%를 최소 높이로 설정 */
+  min-height: 100vh; /* 현재 웹스크린의 높이 100%를 최소 높이로 설정 */
   margin: 0;
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 .App {
-  min-height: 800px;
+  min-height: 100vh;
 }
 
 .modal {
@@ -52,6 +52,10 @@ body {
 
 .pink-font {
   color: #b7147e;
+}
+
+.black-font {
+  color: #fff;
 }
 
 .flex {
