--- a/togetdog_client/src/App.css
+++ b/togetdog_client/src/App.css
@@ -72,3 +72,13 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.loading {
+  height: 100vh;
+  line-height: 100vh;
+  text-align: center;
+}
+
+.space-around {
+  justify-content: space-between;
+}
