--- a/togetdog_client/src/App.css
+++ b/togetdog_client/src/App.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
 
 body {
   /* background-color: #f6f6f6; */
